# valanga

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  release.yml
src/valanga/: __init__.py  checkpoints.py  dynamics.py  evaluations.py  evaluator_types.py  game.py  over_event.py  policy.py  progress_messsage.py  representation_factory.py  represention_for_evaluation.py  reversible_dynamics.py  values.py
tests/: test_checkpoints.py  test_dynamics_protocols.py  test_game_roles.py  test_over_event.py  test_placeholder.py  test_representation_factory.py
valanga/: __init__.py  evaluations.py  game.py  over_event.py  representation_factory.py  represention_for_evaluation.py
